# python-openapi-generator-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  Readme.md  client-test.sh  do_release.sh  do_test.sh  fixme.txt  fmt.sh  gen-cfg.yml  index.html  it.py  it.sh  py-binding.sh  release.sh  sbt-plugin-install.sh  server-test.sh  test.sh  tidy.txt  todo.txt
.github/workflows/: build.yml  test.yml
cli/docker/: generate_from_open_api.sh
cli/py/: build.sh  pyproject.toml
cli/py/src/trustspeccli/: main.py
cli/py/src/trustspecgen/: main.py
docker/: Dockerfile  build.sh
it/gens/python/client/: run.sh
it/specs/openapi/: api.yml  feature.yml  insight.yml  log.yml  model.yml  prediction.yml  table.yml
it/specs/openapi_fastapi/: api.yml
plugin/py/: main.py  run.sh
plugin/py-binding/: Cargo.toml  Cargo.toml.bu  README.md  build.sh  install.sh  pyproject.toml
plugin/py-binding/src/: lib.rs
plugin/sbt/: build.sbt
plugin/sbt/src/main/scala/io/trust/: TrustSbtPlugin.scala
plugin/sh/: run.sh
src/: adt.rs  context.rs  def.rs  desc.rs  ext.rs  lib.rs  main.rs  meta.rs  op.rs  op_param.rs  pkg.rs  req.rs  res.rs  var.rs
src/lib/: adt.rs  carrier.rs  context.rs  def.rs  desc.rs  ext.rs  meta.rs  op.rs  op_param.rs  pkg.rs  ref.rs  req.rs  res.rs  util.rs  validation.rs  var.rs
src/lib/open_api/: components.rs  content.rs  context.rs  header.rs  media_type.rs  mime.rs  mod.rs  open_api.rs  operation.rs  parameter.rs  path.rs  process.rs  processing.rs  ref_or.rs  request_body.rs  response.rs  schema.rs  status_code.rs
src/lib/test/: adt-from-open-api-open-api.yml  adt-from-open-api-trust.yml  adt-to-open-api-open-api.yml  adt-to-open-api-trust.yml  adt.rs  mix-of-mix-open-api.yml  mix-of-mix-trust.yml  mix-open-api.yml  mix-trust.yml  mix.rs  mix_of_mix.rs  mod.rs  op-params-only-from-open-api-open-api.yml  op-params-only-from-open-api-trust.yml  op-params-open-api.yml  op-params-trust.yml  op_params.rs  req-res-open-api.yml  req-res-trust.yml  req_res.rs  type-params-open-api.yml  type-params-trust.yml  type_params.rs  types-open-api.yml  types-trust-only.yml  types-trust.yml  types.rs  util.rs  vars-open-api.yml  vars-trust.yml  vars.rs
src/open_api/: components.rs  content.rs  context.rs  header.rs  media_type.rs  mime.rs  mod.rs  open_api.rs  operation.rs  parameter.rs  path.rs  process.rs  ref_or.rs  request_body.rs  response.rs  schema.rs  status_code.rs
src/test/: adt-from-open-api-trust.yml  adt.rs  mix.rs  mod.rs  op-params-open-api.yml  op-params-trust.yml  op_params.rs  req-res-trust.yml  req_res.rs  types-trust.yml  types.rs  util.rs  vars.rs
src/test/dd/: analytic.yml  entity-relation.yml  experiment.yml  search.yml  table.yml  task.yml
src/test/dd2/: api.yml
test/cli/: test.sh
test/integration/: run.sh  test.py  test.sh
test/integration/gens/python/client/: build.sh  requirements.txt  run.sh  trust-cfg.yml
test/integration/gens/python/client/src/app/: main.py
test/integration/gens/python/server/: run.sh  trust-cfg.yml
test/integration/gens/python/server/src/app/: main.py
test/integration/specs/openapi/: acrobatic.yml  api.yml  elephant.yml  flaming.yml  ibis.yml  log.yml  predator.yml  superman.yml  transformer.yml
test/integration/specs/openapi_fastapi/: api.yml
test/integration/tests/openapi/: acrobatic.yml  api.yml  dev.yml  elephant.yml  external-module.yml  ibis.yml  log.yml  masterpiece.yml  predator.yml  test.yml  tiger.yml  transformer.yml
test/integration/tests/openapi_fastapi/: api.yml
test/py/: test.sh
test_debug/: adt-from-open-api-from-open-api.yml  adt-to-open-api-to-open-api.yml  mix-from-open-api.yml  mix-of-mix-from-open-api.yml  mix-to-open-api.yml  op-params-from-open-api.yml  op-params-to-open-api.yml  req-res-from-open-api.yml  req-res-to-open-api.yml  type-params-to-open-api.yml  types-from-open-api.yml  types-to-open-api.yml  types-trust-only.yml  vars-from-open-api.yml  vars-to-open-api.yml
test_debug/dd/kotlin/: .editorconfig
test_debug/dd/python/client/: run.sh
test_debug/dd/python/client/src/app/: main.py
test_debug/dd/python/client/src/trust/analytic/: analytic_column.py  analytic_table.py  analytic_type.py  lead_time.py
test_debug/dd/python/client/src/trust/api/: id.py  service.py
test_debug/dd/python/client/src/trust/dev/: service.py
test_debug/dd/python/server/src/app/: main.py
test_debug/dd/scala/.bsp/: sbt.json
test_debug/dd2/python/client/src/app/: main.py
wrapper/py/: build_install.sh  install.sh  pyproject.toml
wrapper/py/src/: main.py
(+156 files in other folders)
