[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
convert_case = { version = "0.6.0" }
dyn-clone = { version = "1.0.17" }
handlebars = { version = "5.1.2" }
handlebars_misc_helpers = "0.15.0"
http = { version = "1.1.0" }
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = { version = "0.13.0" }
mime = {version = "0.3.17"}
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = { version = "0.9.32" }
serde_json = { version = "1.0.116", features = ["preserve_order"]  }
strum = { version = "0.26.2"}
strum_macros = { version = "0.26.2"}
typetag = {  version = "0.2" }
void = {  version = "1.0.2" }

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
