[tool.poetry]
name = "trustspeccli"
version = "0.1.1"
authors = ["Wojciech Karwacki <karwacki.wojciech@gmail.com>"]
homepage = "https://github.com/wkarwacki/trust"
repository = "https://github.com/wkarwacki/trust"
documentation = "https://github.com/wkarwacki/trust"
packages = [{include = "trustspeccli", from="src"}]
readme = "README.md"
description = ""

[tool.poetry.dependencies]
python = "^3.10"
trustspecpy = "0.1.0"

[tool.poetry.scripts]
trust = "trustspeccli.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
