[tool.poetry]
name = "trustspeccli"
version = "{VERSION}"
authors = ["Wojciech Karwacki <karwacki.wojciech@gmail.com>"]
homepage = "https://github.com/wkarwacki/python-openapi-generator-rust"
repository = "https://github.com/wkarwacki/python-openapi-generator-rust"
documentation = "https://github.com/wkarwacki/python-openapi-generator-rust"
packages = [{include = "trustspeccli", from="src"}]
readme = "README.md"
description = "Web Integration Specification, easy and lightweight alternative to OpenAPI"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
trustspecpy = "{VERSION}"

[tool.poetry.scripts]
trust = "trustspeccli.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
