[package]
name = "trustspecpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "trustspecpy"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
trust = { path = "../../" }

[dependencies.pyo3]
version = "0.22.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
